--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div id="lensInfo" class="desktop-only"></div>
 
   <div id="explanationBox" class="desktop-only">
-    <p>⚠️ Let op: sommige lenzen zijn visueel gematcht. Als je bijvoorbeeld 35mm kiest, zie je soms een lens van 32 of 37mm die op 35mm lijkt qua field of view. Dit is om een eerlijke vergelijking te bieden.</p>
+    <p>⚠️ Note: Some lenses are visually matched. For example, if you select 35mm, you may see a 32mm or 37mm lens that matches the 35mm field of view. This ensures a fair and accurate comparison.</p>
   </div>
 
   <!-- === MOBILE VIEW ONLY: Embedded fullscreen iframe === -->
