--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<!-- IronGlass Header Logo -->
+<div id="igHeader">
+  <img src="IRONGASS LOGO.png" alt="IronGlass Logo">
+</div>
+  
 <div class="controls desktop-only">
  <div class="row row-1">
   <button id="toggleButton" class="control-button">↔ Flip</button>
